# mac-keyboard-mcp

./: .gitignore  Cargo.toml  README.md  VERIFICATION_REPORT.md  debug_server.py  mcp-bridge.js  mcp-wrapper.sh  memory-analysis.md  test_error_handling.py  test_f_key_secondary.py  test_full_flow.py  test_mcp_tool.py  verify_setup.sh
.github/workflows/: verify.yml
analysis/: analyze_keycodes.py  keycodes.json  keycodes.rs  keycodes_manual.json
docs/: fn-key-behavior.md  human-verification-plan.md  keycode-corrections.md  keycode-final-summary.md  level1-plan.md  level2-plan.md  verification-checklist.md  verification-dashboard.html  verification-summary.md
docs/verification-templates/: stage1-data-validation.md  stage2-api-design.md  stage5-user-acceptance.md
examples/: usage.md
scripts/: check_all_keys.py  comprehensive_test.py  continuous_verify.sh  debug_claude_code.py  export_keycodes.py  keycodes.json  quick_test.py  research_fn_keys.py  test_claude_protocol.py  test_keycodes.py  test_mcp_server.py  test_results.json  verification_report_comprehensive.json  verify_keycodes.py  verify_missing_keys.py
src/: lib.rs  lib_tests.rs  main.rs  main_new.rs  main_old.rs  mcp_server.rs
src/keycode/: database.rs  mod.rs  parser.rs  secondary_functions.rs  types.rs
src/mcp/: mod.rs  resources.rs  server.rs  tools.rs
src/search/: fuzzy.rs  mod.rs
src/utils/: error.rs  mod.rs
tests/: verification_helpers.rs
understanding/: README.md  complete-request-flow-example.md  implementation-guide.md  mcp-protocol-basics.md  request-flow.md  rust-foundations.md  server-architecture.md
